print data to the user

--- a/js/templates/privateContentView.handlebars
+++ b/js/templates/privateContentView.handlebars
@@ -1,5 +1,9 @@
-<div class="jumbotron">
-	<div class="container">
-    	<h1>Welcome User</h1>
-    </div>
+<div>
+	<div class="jumbotron">
+		<div class="container">
+	    	<h1>Welcome User</h1>
+	    	<p>name: {{name}}</p>
+	    	<p>email: {{email}}</p>
+	    </div>
+	</div>
 </div>
