--- a/js/templates/publicContentView.handlebars
+++ b/js/templates/publicContentView.handlebars
@@ -16,17 +16,21 @@
 		<form role="form">
 			<div class="form-group">
 				<label for="exampleInputEmail1">User name</label>
-				<input type="text" class="form-control" id="exampleInputEmail1" placeholder="User name">
+				<input type="text" class="form-control" id="name" placeholder="User name">
 			</div>
 			<div class="form-group">
 				<label for="exampleInputEmail1">Email address</label>
-				<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+				<input type="email" class="form-control" id="email" placeholder="Enter email">
 			</div>
 			<div class="form-group">
 				<label for="exampleInputPassword1">Password</label>
-				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+				<input type="password" class="form-control" id="password" placeholder="Password">
 			</div>
-			<button id="" type="submit" class="btn btn-primary signIn">Create Account</button>
+			<div class="form-group">
+				<label for="exampleInputPassword1">Repeat Password</label>
+				<input type="password" class="form-control" id="repeatPassword" placeholder="Repeat Password">
+			</div>
+			<button id="registerUser" type="submit" class="btn btn-primary">Create Account</button>
 		</form>
 	</div>
 </div>
