--- a/js/templates/publicTopbarView.handlebars
+++ b/js/templates/publicTopbarView.handlebars
@@ -11,7 +11,7 @@
     <div class="navbar-collapse collapse">
         <form class="navbar-form navbar-right">
             <div class="form-group">
-                <input type="text" placeholder="Email" class="form-control">
+                <input type="email" placeholder="Email" class="form-control">
             </div>
             <div class="form-group">
                 <input type="password" placeholder="Password" class="form-control">
